使用 Colaboratory 创建

--- a/GNNstudy1_introduction.ipynb
+++ b/GNNstudy1_introduction.ipynb
@@ -15,7 +15,7 @@
       "cell_type": "code",
       "source": [
         "# if you are using colab, you can run it. Maybe it spend too much time.\n",
-        "# jupyter or pycharm are not need. Or you can delet '！' and pip them.\n",
+        "# jupyter or pycharm are not need. Or you can delete '！' and pip them.\n",
         "!pip install -q torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
         "!pip install -q torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
         "!pip install -q git+https://github.com/pyg-team/pytorch_geometric.git"
@@ -27,7 +27,7 @@
         "id": "brfSwKZ7S4Q7",
         "outputId": "b5c776cf-b565-424f-b936-054b194c226e"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,7 +89,7 @@
         "        plt.xlabel(f'Epoch: {epoch}, Loss: {loss.item():.4f}', fontsize=16)\n",
         "    plt.grid(color = 'grey',linestyle = '--', linewidth = 0.5)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -136,7 +136,7 @@
         "print(f'Number of features: {dataset.num_features}')\n",
         "print(f'Number of classes: {dataset.num_classes}')"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,7 +189,7 @@
         "print(f'Has self-loops: {data.has_self_loops()}')\n",
         "print(f'Is undirected: {data.is_undirected()}')"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,7 +255,7 @@
         "edge_index = data.edge_index\n",
         "print(edge_index.t())"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -466,7 +466,7 @@
         "G = to_networkx(data, to_undirected=True)\n",
         "visualize_graph(G, color=data.y)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -543,7 +543,7 @@
         "model = GCN()\n",
         "print(model)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,7 +605,7 @@
         "\n",
         "visualize_embedding(h, color=data.y)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -696,7 +696,7 @@
         "    lossall.append(loss.item())\n",
         "\n"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -792,7 +792,7 @@
         "id": "lr7L_KAReSXo",
         "outputId": "65f00353-b417-4b94-a0e6-041e2fe2ddba"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
