使用 Colaboratory 创建

--- a/examples/multiple_choice.ipynb
+++ b/examples/multiple_choice.ipynb
@@ -3,18 +3,35 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ryanskytree/GNN_beginning/blob/main/examples/multiple_choice.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "X4cRE8IbIrIV"
       },
       "source": [
         "If you're opening this Notebook on colab, you will probably need to install 🤗 Transformers and 🤗 Datasets. Uncomment the following cell and run it.\n",
         "\n",
         "Paper read\n",
+        "\n",
         "https://arxiv.org/abs/1808.05326\n",
+        "\n",
         "https://arxiv.org/abs/1810.04805\n",
+        "\n",
         "https://arxiv.org/abs/1706.03762\n",
+        "\n",
         "Related documents\n",
+        "\n",
         "https://huggingface.co/docs/transformers/training#train-with-pytorch-trainer\n",
+        "\n",
         "https://huggingface.co/docs/transformers/tasks/multiple_choice\n",
+        "\n",
         "https://github.com/huggingface/transformers/tree/main/examples/pytorch/multiple-choice"
       ]
     },
@@ -1351,7 +1368,8 @@
   "metadata": {
     "colab": {
       "name": "Multiple choice on SWAG",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
